tests/NormalTests/paczka1/fuzzy1/17700101.err
Error in line 5: n4Qvpm4M A978 46,9
Error in line 17: n4Qvpm4M A406 1,31
Error in line 21: 5pO A406 279,0
Error in line 23: 5pO A978 94,2
Error in line 25: 5pO A230 80,3
Error in line 27: A181 A230 67,0
Error in line 32: A181 A406 60,7
Error in line 35: A181 A978 63,7
Error in line 20: n4Qvpm4M A406 5,1
